images/img2.jpg

--- a/page2.html
+++ b/page2.html
@@ -12,7 +12,7 @@
     <button class="thank-button">Thank You</button>
   
   
-  <audio id="birthdaySong" autoplay loop>
+  <audio id="birthdaySong">
     <source src="music/happy-birthday.mp3" preload="auto"></audio>
   <button id="playSongBtn">🎵 Play Birthday Song</button>
   </div>
