--- a/page4.html
+++ b/page4.html
@@ -46,9 +46,8 @@
   z-index: 4;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   /* Center the image */
-  position: relative;
-  top: 50%;
-  left: 50%;
+  position: fixed;
+  
   overflow: hidden; ;
   border-radius: 10px;
   
@@ -148,6 +147,7 @@
   <div class="background-grid">
     <img src="images/img1.jpg" alt="">
     <img src="images/img13.jpg" alt="">
+    <img src="images/img2.jpg" alt="">
     <img src="images/img3.jpg" alt="">
     <img src="images/img4.jpg" alt="">
     <img src="images/img5.jpg" alt="">
