--- a/page3.html
+++ b/page3.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <body>
-    <audio id="backgroundMusic"autoplay loop ><source src="music/pal pal.mp3" type="audio/mp3"></audio>
+    <audio id="backgroundMusic"autoplay loop ><source src="music/pal-trim.mp3" type="audio/mp3"></audio>
 
   
     <button id="musicBtn">🎵</button>
